--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,9 +3,9 @@ owner: Rileyjrjohns # Your GitHub organization or username, where this repositor
 repo: vibly-status # The name of this repository
 sites:
   - name: Serveur
-    url: https://rest.vibly.app
+    url: https://rest-v2.vibly.app/api/2
   - name: Scheduler
-    url: http://scheduler-env.eba-j8qik3nf.eu-west-3.elasticbeanstalk.com
+    url: http://new-scheduler-env.eba-d2qms48x.eu-west-3.elasticbeanstalk.com
   - name: Site Internet
     url: https://vibly.fr
   - name: CDN utilisateurs
