--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: Rileyjrjohns # Your GitHub organization or username, where this repositor
 repo: vibly-status # The name of this repository
 sites:
   - name: Serveur
-    url: https://rest-v2.vibly.app/api/2
+    url: https://rest-v2.vibly.app
   - name: Scheduler
     url: http://new-scheduler-env.eba-d2qms48x.eu-west-3.elasticbeanstalk.com
   - name: Site Internet
