--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,5 +1,5 @@
 # Change these first
-owner: Rileyjrjohns # Your GitHub organization or username, where this repository lives
+owner: vibly # Your GitHub organization or username, where this repository lives
 repo: vibly-status # The name of this repository
 sites:
   - name: Serveur
